# polyscan

./: .gitignore  README.md  molcrafts-cpu.def  pyproject.toml
example/peo-net/: _optimized.pdb_FORCED  log.lammps  mass.txt  packmol.inp  packmol.out  post_stp1.mol  pre_stp1.mol  run.in  run.ipynb  rxn.txt  stp1.map  system.data  system.ff
example/salamander/: run.ipynb
example/salamander/units/: Li+.mol2
src/polyscan/: app.py  eq_script.py  mech_script.py  pack.py  polymerize.py  typify.py
